# web_server

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  index.html  rtds.proto
include/: client_handler.h  common.h  data.hpp  empty_mutex.h  empty_mutex.hpp  event_handler.h  lock_guard.h  lock_guard.hpp  message_manager.h  payload.h  per_session_data.h  queue_with_id.h  queue_with_id.hpp  request_parser.h  rtds.pb.h
mount-origin/: asd.js  commessage.js  commessagetype.js  index.html  message.js  messagefield.js
src/: client_handler.cc  event_handler.cc  main.cc  main.cpp  message_manager.cc  request_parser.cc  rtds.pb.cc
